# solaire

./: .gitignore  README.md  pyproject.toml  requirements.txt
solaire/: main.py
solaire/components/: __init__.py  about.py  commit.py  file_explorer.py  git.py  preferences.py  solaire_git.py  structure_explorer.py
solaire/core/: appdata.py  broker.py  client.py  code_editor.py  code_text_edit.py  common_events.py  editor_tabs.py  evaluator.py  explorer.py  file_explorer.py  minimap.py  output_tabs.py  project.py  sections.py  sections_bar.py  shortucts.py  side_trees.py  sidebar.py  status_bar.py  structure_explorer.py  tabs.py  terminal.py  theme.py  timers.py  toolbar.py
solaire/core/code_editor/: code_editor.py  completion.py  folding.py  line_number.py  minimap.py
solaire/core/languages/: __init__.py  json_syntax.py  python_syntax.py  yaml_syntax.py
solaire/core/resources/: __init__.py
solaire/media/: __init__.py
