[build-system]
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools]
packages = ["Solaire"]

[project]
name = "Solaire"
authors = [
    {name = "Nathan Maxwell"}
]
description = "A python code editor for DCC development."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "PySide", "editor", "dcc"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    "PySide6",
    "PySide6TK",
    "jedi"
]
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/nate-maxwell/solaire"
Source = "https://github.com/nate-maxwell/solaire"
